<resources>
    <string name="app_name">Proximity</string>
    <string name="chrome">Chrome</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>
    <string name="whatsapp">whatsapp</string>
    <string name="dumpert">Dumpert</string>
    <string name="settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="snapchat">Snapchat</string>
    <string name="back">Back</string>
    <string name="testTextView">Test</string>
    <string name="inputPasswordTitle">Code</string>
    <string name="noProximitySensor">Proximity sensor kan niet worden gebruikt</string>
    <string name="successfulOpening">App successvol geopend</string>
    <string name="failedOpening">Mislukte opening van de app</string>
    <string name="appTitle">APP</string>
    <string name="placeholder"> </string>
    <string name="longInput">Lang</string>
    <string name="shortInput">Kort: %1$d</string>
    <string name="resetInputButton">Reset</string>
    <string name="inputCode">Ingevoerde code: %1$s</string>
</resources>
